Added extra release path to emulate Maven structure

--- a/build.xml
+++ b/build.xml
@@ -53,6 +53,7 @@
             <entry key="release.version" value="${release.version}"/>
             <entry key="project.name" value="${ant.project.name}"/>
             <entry key="release.name" value="${release.name}"/>
+            <entry key="release.path" value="com/googlecode/totallylazy/totallylazy/${release.version}/"/>
             <entry key="release.files" value="${release.jar},${release.pom},${release.src}"/>
             <entry key="${release.jar}.description" value="${hg.summary} build:${build.number} "/>
             <entry key="${release.jar}.labels" value="Featured"/>
