--- a/build.xml
+++ b/build.xml
@@ -16,15 +16,17 @@
     <property name="test.jar.path" value="${artifacts}/${release.name}.test.jar"/>
     <property name="build.dependencies.dir" value="lib/build"/>
     <property name="runtime.dependencies.dir" value="lib/runtime"/>
-    <property name="optional.dependencies.dir" value="lib/optional"/>
+    <property name="optional.dependencies.dir" value="lib/runtime/optional"/>
+    <property name="manual.dependencies.dir" value="lib/runtime/optional/manual"/>
 
     <import file="${build}/macros.xml"/>
     <import file="${build}/shavenmaven.xml"/>
 
     <path id="all.dependancies">
         <fileset dir="${build.dependencies.dir}" includes="**/*.jar"/>
-        <fileset dir="${runtime.dependencies.dir}" includes="**/*.jar"/>
-        <fileset dir="${optional.dependencies.dir}" includes="**/*.jar"/>
+        <fileset dir="${runtime.dependencies.dir}" includes="*.jar"/>
+        <fileset dir="${optional.dependencies.dir}" includes="*.jar"/>
+        <fileset dir="${manual.dependencies.dir}" includes="*.jar"/>
     </path>
 
     <path id="all.jars">
