--- a/build.xml
+++ b/build.xml
@@ -16,8 +16,8 @@
     <property name="test.jar.path" value="${artifacts}/${release.name}.test.jar"/>
     <property name="build.dependencies.dir" value="lib/build"/>
     <property name="runtime.dependencies.dir" value="lib/runtime"/>
-    <property name="optional.dependencies.dir" value="lib/runtime/optional"/>
-    <property name="manual.dependencies.dir" value="lib/runtime/optional/manual"/>
+    <property name="optional.dependencies.dir" value="lib/optional"/>
+    <property name="manual.dependencies.dir" value="lib/manual"/>
 
     <import file="${build}/macros.xml"/>
     <import file="${build}/shavenmaven.xml"/>
