--- a/build.xml
+++ b/build.xml
@@ -21,6 +21,8 @@
     <import file="${build}/macros.xml"/>
     <import file="${build}/shavenmaven.xml"/>
 
+    <requires java.version="1.7"/>
+
     <path id="all.dependancies">
         <fileset dir="${build.dependencies.dir}" includes="**/*.jar"/>
         <fileset dir="${runtime.dependencies.dir}" includes="*.jar"/>
