--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
     </path>
 
     <target name="update">
-        <!--<install version="39"/>-->
+        <install version="47"/>
         <parallel>
             <update dependencies="build/build.dependencies"
                     directory="${build.dependencies.dir}"/>
