--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ env:
   global:
     - JDK_URL=http://download.oracle.com/otn-pub/java/jdk/8u45-b14/jdk-8u45-linux-x64.tar.gz
     - JDK_HOME=jdk1.8.0_45
+    - PATH==${JDK_HOME}/bin:${PATH}
 
-before script:
+before_script:
   - curl -v -j -k -L -H "Cookie: oraclelicense=accept-securebackup-cookie" ${JDK_URL} | tar xv
-  - export PATH==${JDK_HOME}/bin:${PATH}
 
 script:
   - bash jcompilo.sh
