--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 jdk: oraclejdk8
 
 install: 
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq oracle-java8-installer
+  - sudo apt-get update
+  - sudo apt-get install oracle-java8-installer
 
 script: bash ./jcompilo.sh
