--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -20,5 +20,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build with Ant
-      run: ant -noinput -buildfile build.xml -Dbuild.number=$GITHUB_RUN_NUMBER
+    - name: Build with JCompilo
+      run: ./jcompilo.sh
