--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -17,8 +17,8 @@ jobs:
         java-version: 1.8
     - name: Set release version
       run: echo "::set-env name=RELEASE_VERSION::${GITHUB_REF##*/}"
-    - name: Build with Ant
-      run: ant -noinput -buildfile build.xml -Dbuild.number="$RELEASE_VERSION"
+    - name: Build with JCompilo
+      run: ./jcompilo.sh
     - name: Publish to Bintray
       run: bin/publish "$RELEASE_VERSION" "$BINTRAY_USERNAME" "$BINTRAY_PASSWORD"
       env:
