--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -16,14 +16,11 @@ jobs:
       with:
         java-version: 1.8
     - name: Set release version
-      run: echo "::set-output name=RELEASE_VERSION::${GITHUB_REF##*/}"
+      run: echo "::set-env name=RELEASE_VERSION::${GITHUB_REF##*/}"
     - name: Build with JCompilo
-      run: ./jcompilo.sh
-      env:
-        BUILD_NUMBER: ${{ outputs.RELEASE_VERSION }}
+      run: BUILD_NUMBER="$RELEASE_VERSION" ./jcompilo.sh
     - name: Publish to Bintray
       run: bin/publish "$RELEASE_VERSION" "$BINTRAY_USERNAME" "$BINTRAY_PASSWORD"
       env:
-        RELEASE_VERSION: ${{ outputs.RELEASE_VERSION }}
         BINTRAY_USERNAME: ${{ secrets.BINTRAY_USERNAME }}
         BINTRAY_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
