--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -11,16 +11,30 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Set release version
-      run: echo "::set-env name=RELEASE_VERSION::${GITHUB_REF##*/}"
+      run: echo "RELEASE_VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
     - name: Build with JCompilo
       run: BUILD_NUMBER="$RELEASE_VERSION" ./jcompilo.sh
-    - name: Publish to Bintray
-      run: bin/publish "$RELEASE_VERSION" "$BINTRAY_USERNAME" "$BINTRAY_PASSWORD"
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        body: ${{ github.event.head_commit.message }}
+        draft: false
+        prerelease: false
+        files: |
+          build/artifacts/totallylazy-${{ env.RELEASE_VERSION }}.pom
+          build/artifacts/totallylazy-${{ env.RELEASE_VERSION }}.jar
+          build/artifacts/totallylazy-${{ env.RELEASE_VERSION }}-sources.jar
+
+    - name: Publish to GitHub Packages
+      run: bin/publish "$RELEASE_VERSION" "$GH_PACKAGES_TOKEN"
       env:
-        BINTRAY_USERNAME: ${{ secrets.BINTRAY_USERNAME }}
-        BINTRAY_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
+        GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
